# local-ucai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml  type-check.yml
docs/: RED_TEAMING_ATTACK_LIBRARY_REPORT.md
scripts/: populate_database.py
src/: __init__.py
src/backend/: __init__.py  app.py  exceptions.py  modal.py  schemas.py
src/backend/api/: __init__.py  agent_configs.py  attacks.py  batches.py  configs.py  contexts.py  conversations.py  evals.py  grades.py  playground.py  products.py  prompts.py  risks.py  rubrics.py  templates.py
src/backend/services/: __init__.py  batch_service.py  eval_service.py  playground_service.py  taxonomy_service.py
src/backend/workers/: __init__.py  eval_workers.py
src/core/: __init__.py  main.py
src/core/adapters/: __init__.py  base.py  factory.py  intercom.py  test.py
src/core/agent/: __init__.py  red_teamer.py
src/core/attacks/: __init__.py  base.py  taxonomy.py
src/core/builders/: __init__.py  spec_builder.py
src/core/environments/: __init__.py  base.py  callbacks.py  multi_turn.py  single_turn.py
src/core/grading/: __init__.py  grader.py
src/core/models/: __init__.py  grade.py  specification.py  state.py
src/core/parsers/: __init__.py  parser.py  xml.py
src/core/prompts/: generate_plan.jinja2  generate_response.jinja2  grading_judge.jinja2  system_prompt.jinja2  update_plan.jinja2
src/core/refusal/: __init__.py  classifier.py
src/database/: __init__.py  config.py  enums.py  models.py
tests/: __init__.py
(+18 files in other folders)
